--- a/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
+++ b/overlay/frameworks/base/packages/SettingsProvider/res/values/defaults.xml
@@ -19,4 +19,7 @@
 <resources>
     <!-- 60 seconds for default screen timeout -->
     <integer name="def_screen_off_timeout">30000</integer>
+
+    <!-- Set the automatic brightness mode on by default -->
+    <bool name="def_screen_brightness_automatic_mode">true</bool>
 </resources>
